--- a/styles/base/_fonts.scss
+++ b/styles/base/_fonts.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.cdnfonts.com/css/clash-display');
+
 @import url('https://fonts.cdnfonts.com/css/satoshi');
 
-// font-family: 'Clash Display', sans-serif;
-// font-family: 'Satoshi', sans-serif;
+@import url('https://fonts.cdnfonts.com/css/gilroy-bold');
 
 * {
   font-family: $font-primary;
