--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -1,6 +1,20 @@
+// font-family: 'Clash Display', sans-serif;
+
+// font-family: 'Satoshi', sans-serif;
+
+// font-family: 'Gilroy-Bold', sans-serif;
+// font-family: 'Gilroy-Heavy', sans-serif;
+// font-family: 'Gilroy-Light', sans-serif;
+// font-family: 'Gilroy-Medium', sans-serif;
+// font-family: 'Gilroy-Regular', sans-serif;
+
 $light: #fff;
 $primary: #222222;
 $secondary: #a7a7a7;
 
-$font-primary: "Satoshi", sans-serif;
-$font-secondary: "Clash Display", sans-serif;
+$font-primary: "Clash Display", sans-serif;
+$font-secondary: "Gilroy-Bold", sans-serif;
+$font-secondary-heavy: "Gilroy-Heavy", sans-serif;
+$font-secondary-light: "Gilroy-Light", sans-serif;
+$font-secondary-medium: "Gilroy-Medium", sans-serif;
+$font-secondary-regular: "Gilroy-Regular", sans-serif;
