--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -6,7 +6,7 @@
   align-items: center;
   background-color: rgb(248 250 252/1);
   overflow: hidden;
-  min-height: 100vh;
+  height: 100vh;
   &__lines {
     position: absolute;
     inset: 0;
@@ -40,6 +40,8 @@
       line-height: 1;
       font-weight: 700;
       color: transparent;
+      opacity: 1;
+      transform: none;
       -webkit-text-stroke: 0.5px $primary;
       letter-spacing: 0.125rem;
       padding-bottom: 0.25rem;
@@ -56,6 +58,9 @@
         font-weight: inherit;
         font-family: inherit;
         letter-spacing: inherit;
+
+        opacity: 1;
+        transform: none;
 
         color: $primary;
 
@@ -147,6 +152,7 @@
 body.dark {
   .home {
     background-color: rgb(0, 0, 0/1);
+    background: $primary;
     &__lines {
       mask-image: linear-gradient(to top, transparent, $light, $light);
       -webkit-mask-image: linear-gradient(to top, transparent, $light, $light);
