--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -42,15 +42,17 @@
       color: transparent;
       opacity: 1;
       transform: none;
-      -webkit-text-stroke: 2px $primary;
+      // -webkit-text-stroke: 2px $primary;
+      -webkit-text-stroke: 0.5px $primary;
       letter-spacing: 0.125rem;
       padding-bottom: 0.25rem;
 
-      font-family: "Clash Display", sans-serif;
+      // font-family: "Clash Display", sans-serif;
 
       &::selection {
         background: $primary;
-        -webkit-text-stroke: 2px $light;
+        // -webkit-text-stroke: 2px $light;
+        -webkit-text-stroke: 0.5px $primary;
       }
 
       span {
@@ -78,6 +80,10 @@
           bottom: 0;
           height: 15px;
           z-index: -1;
+
+          @media only screen and (max-width: 640px) {
+            display: none;
+          }
         }
 
         &::selection {
@@ -95,6 +101,10 @@
       @media only screen and (max-width: 640px) {
         font-size: 2rem;
         line-height: 2rem;
+
+        font-family: "Gilroy-Regular", sans-serif;
+
+        -webkit-text-stroke: 0.25px $primary;
       }
     }
 
