--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -102,9 +102,9 @@
         font-size: 2rem;
         line-height: 2rem;
 
-        font-family: "Gilroy-Regular", sans-serif;
+        font-family: "Clash Display", sans-serif;
 
-        -webkit-text-stroke: 0.25px $primary;
+        -webkit-text-stroke: .75px $primary;
       }
     }
 
