--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,7 +5,7 @@
 @import './components/cursor';
 @import './components/header';
 @import './components/loader';
-@import './components/themeToggle';
+@import './components/nav';
 
 @import './pages/home';
 @import './pages/about';
