--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -18,15 +18,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    display: none;
     img {
       position: absolute;
       bottom: 0;
       left: 100%;
       transform: translateX(-50%);
+      left: 50%;
       width: 350px;
       filter: grayscale(1);
       object-fit: cover;
-      animation: velo 10s ease infinite;
+      //animation: velo 10s ease infinite;
     }
     @keyframes velo {
       0% {
@@ -74,6 +76,7 @@
       width: 300px;
       transform: rotate(45deg);
       filter: grayscale(1);
+      object-fit: cover;
       @media only screen and (max-width: 640px) {
         display: none;
       }
@@ -81,30 +84,32 @@
       &.home__container-img1 {
         top: -100%;
         left: -5%;
-        animation: animate1 30s ease infinite alternate;
+        transform: rotate(0deg) translateX(-30px) rotate(0deg);
+        // animation: animate1 30s ease infinite alternate;
       }
       &.home__container-img2 {
         bottom: -50%;
         right: -5%;
-        animation: animate2 30s ease infinite alternate;
+        transform: rotate(40deg) translateX(70px) rotate(0deg);
+        // animation: animate2 30s ease infinite alternate;
       }
 
-      @keyframes animate1 {
-        from {
-          transform: rotate(45deg) translateX(50px) rotate(45deg);
-        }
-        to {
-          transform: rotate(360deg) translateX(50px) rotate(-360deg);
-        }
-      }
-      @keyframes animate2 {
-        from {
-          transform: rotate(-45deg) translateX(50px) rotate(-45deg);
-        }
-        to {
-          transform: rotate(-360deg) translateX(50px) rotate(360deg);
-        }
-      }
+      // @keyframes animate1 {
+      //   from {
+      //     transform: rotate(45deg) translateX(50px) rotate(45deg);
+      //   }
+      //   to {
+      //     transform: rotate(360deg) translateX(50px) rotate(-360deg);
+      //   }
+      // }
+      // @keyframes animate2 {
+      //   from {
+      //     transform: rotate(-45deg) translateX(50px) rotate(-45deg);
+      //   }
+      //   to {
+      //     transform: rotate(-360deg) translateX(50px) rotate(360deg);
+      //   }
+      // }
     }
 
     h1 {
@@ -190,6 +195,7 @@
       color: $primary;
       text-align: center;
       padding: 0.375rem 0 1.5rem 0;
+      mix-blend-mode: difference;
       span {
         font-size: inherit;
         font-weight: inherit;
