--- a/styles/components/cursor.scss
+++ b/styles/components/cursor.scss
@@ -24,11 +24,10 @@
     border: none;
   }
 
-  // &:active {
+  // &.expand {
   //   width: 50px;
   //   height: 50px;
   //   border-width: 3px;
-  //   pointer-events: initial;
   // }
 }
 .dot {
