--- a/styles/components/cursor.scss
+++ b/styles/components/cursor.scss
@@ -2,11 +2,11 @@
   position: fixed;
   top: 0;
   left: 0;
+  transform: translate(-50%, -50%);
   width: 30px;
   height: 30px;
   border: 2px solid $primary;
-  border-radius: 100%;
-  transform: translate(-50%, -50%);
+  border-radius: 50%;
   -webkit-transition-duration: 100ms;
   transition-duration: 100ms;
   -webkit-transition-timing-function: ease-out;
@@ -15,6 +15,10 @@
   z-index: 999;
   pointer-events: none;
   mix-blend-mode: multiply;
+
+  @media only screen and (max-width: 640px) {
+    display: none;
+  }
 
   &.hovered {
     width: 50px;
@@ -34,13 +38,17 @@
   position: fixed;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
   width: 5px;
   height: 5px;
   background-color: $primary;
-  border-radius: 100%;
-  transform: translate(-50%, -50%);
   z-index: 999;
   pointer-events: none;
+
+  @media only screen and (max-width: 640px) {
+    display: none;
+  }
 
   &.hovered {
     display: none;
