init about section

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -18,3 +18,4 @@ $font-secondary-heavy: "Gilroy-Heavy", sans-serif;
 $font-secondary-light: "Gilroy-Light", sans-serif;
 $font-secondary-medium: "Gilroy-Medium", sans-serif;
 $font-secondary-regular: "Gilroy-Regular", sans-serif;
+$font-satoshi: "Satoshi", sans-serif;
