--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -1,1 +1,153 @@
-.about{}
+.about {
+  background: $light;
+  display: flex;
+  overflow: hidden;
+  min-height: 100vh;
+  &-illus {
+  }
+  &-left {
+    z-index: 2;
+    width: 75%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+    padding: 15rem 1.5rem 1.5rem 15rem;
+    &__title {
+      width: 100%;
+      border-bottom: 2px solid $primary;
+
+      h2 {
+        position: relative;
+        font-size: 3.5rem;
+        font-weight: 700;
+        color: transparent;
+        -webkit-text-stroke: 2px $primary;
+        // font-family: $font-primary;
+        @media only screen and (max-width: 640px) {
+          font-size: 2.5rem;
+        }
+      }
+    }
+    &__text {
+      font-weight: 500;
+      font-size: 1.25rem;
+      line-height: 1.4;
+      font-family: $font-satoshi;
+      a {
+        color: $primary;
+        font-weight: inherit;
+        font-family: inherit;
+        text-decoration: underline;
+      }
+    }
+    &__links {
+      display: flex;
+      align-items: center;
+      gap: 1.5rem;
+      a {
+        display: flex;
+        font-size: 1.25rem;
+        font-weight: 500;
+        color: $primary;
+        text-decoration: underline;
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+  &-right {
+    z-index: 2;
+    width: 25%;
+    min-height: 100vh;
+    padding-left: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__image {
+      width: 100%;
+      height: 100%;
+      border-radius: 50px 0 0 50px;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: grayscale(1);
+      }
+    }
+  }
+  @media screen and (max-width: 1280px) {
+    &-left {
+      width: 50%;
+      padding: 15rem 1.5rem 1.5rem 3rem;
+      &__title {
+        h2 {
+          font-size: 2.5rem;
+        }
+      }
+      &__text {
+        font-size: 1rem;
+      }
+      &__links {
+        a {
+          font-size: 1rem;
+        }
+      }
+    }
+    &-right {
+      width: 50%;
+      &__image {
+        border-radius: 0 0 0 50px;
+      }
+    }
+  }
+  @media screen and (max-width: 820px) {
+    flex-direction: column-reverse;
+    align-items: center;
+    &-left {
+      width: 90%;
+      padding: 2rem 0 8rem 0;
+    }
+    &-right {
+      width: 90%;
+      height: 100%;
+      min-height: 100%;
+      padding-left: 0;
+      margin-top: 5rem;
+      &__image {
+        border-radius: 30px;
+        img{
+
+        }
+      }
+    }
+  }
+}
+body.dark {
+  .about {
+    background: $primary;
+    &-left {
+      &__title {
+        border-color: $light;
+        h2 {
+          color: transparent;
+          -webkit-text-stroke: 2px $light;
+        }
+      }
+      &__text {
+        color: $light;
+        a {
+          color: $light;
+        }
+      }
+      &__links {
+        a {
+          color: $light;
+        }
+      }
+    }
+  }
+}
