--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -31,9 +31,9 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $font-secondary;
-  font-size: 100%;
-  font-weight: normal;
+  // font-family: $font-secondary;
+  // font-size: 100%;
+  // font-weight: normal;
 }
 
 ul {
@@ -99,4 +99,24 @@ a {
   width: 100%;
   height: 3.5px;
   border-radius: 0 0 5px 5px;
+}
+
+.page__lines {
+  position: absolute;
+  inset: 0;
+  mask-image: linear-gradient(to top, transparent, $primary, $primary);
+  -webkit-mask-image: linear-gradient(to top, transparent, $primary, $primary);
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='30' height='30' fill='none' stroke='rgb(15 23 42 / 0.04)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+  background-position: bottom 1px center;
+  background-color: rgb(255 255 255/0.25);
+}
+
+body.dark {
+  .page__lines {
+    mask-image: linear-gradient(to top, transparent, $light, $light);
+    -webkit-mask-image: linear-gradient(to top, transparent, $light, $light);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='30' height='30' fill='none' stroke='rgb(15 23 42 / 0.04)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+    background-position: bottom 1px center;
+    background-color: rgb(0 0 0/0.25);
+  }
 }
