--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -71,6 +71,9 @@
       height: 100%;
       border-radius: 50px 0 0 50px;
       overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       img {
         width: 100%;
         height: 100%;
