--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -10,7 +10,12 @@
   width: 100%;
   padding: 0.25rem 2rem;
   &-logo {
-    width: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    svg {
+      width: 100px;
+    }
   }
   &-theme {
     display: flex;
