--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -74,11 +74,12 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      background: $primary;
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
-        filter: grayscale(1);
+        filter: grayscale(0);
       }
     }
   }
