--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -26,8 +26,8 @@
       transform: translateX(-50%);
       left: 50%;
       width: 350px;
-      -webkit-filter: grayscale(1);
-              filter: grayscale(1);
+      -webkit-filter: grayscale(0);
+              filter: grayscale(0);
       -o-object-fit: cover;
          object-fit: cover;
       //animation: velo 10s ease infinite;
@@ -71,8 +71,8 @@
       z-index: -1;
       width: 300px;
       transform: rotate(45deg);
-      -webkit-filter: grayscale(1);
-              filter: grayscale(1);
+      -webkit-filter: grayscale(0);
+              filter: grayscale(0);
       -o-object-fit: cover;
          object-fit: cover;
       @media only screen and (max-width: 640px) {
@@ -122,7 +122,8 @@
       // -webkit-text-stroke: 0.5px $primary;
       letter-spacing: 0.125rem;
       padding-bottom: 0.25rem;
-      mix-blend-mode: difference;
+      // mix-blend-mode: difference;
+      mix-blend-mode: plus-lighter;
 
       text-rendering: optimizeSpeed;
 
