--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -62,6 +62,13 @@ html {
   color: $light;
 }
 
+// body {
+//   background: $light;
+//   body.dark {
+//     background-color: $primary;
+//   }
+// }
+
 img,
 video {
   height: auto;
