--- a/styles/pages/contact.scss
+++ b/styles/pages/contact.scss
@@ -1,1 +1,46 @@
-.contact{}
+.contact {
+  background: $light;
+  display: flex;
+  overflow: hidden;
+  min-height: 100vh;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 15rem 15rem 1.5rem;
+  &-illus {
+    position: absolute;
+    z-index: 2;
+    width: 300px;
+    top: 0;
+    left: 0%;
+    transform: rotate(0deg) translateX(-30px) rotate(0deg);
+    display: none;
+  }
+  &-title {
+    width: 100%;
+    border-bottom: 2px solid $primary;
+
+    h2 {
+      position: relative;
+      font-size: 3.5rem;
+      font-weight: 700;
+      letter-spacing: .15rem;
+      color: transparent;
+      text-transform: uppercase;
+      -webkit-text-stroke: 2px $primary;
+      // font-family: $font-primary;
+      @media only screen and (max-width: 640px) {
+        font-size: 2.5rem;
+      }
+    }
+  }
+}
+body.dark {
+  .contact {
+    background: $primary;
+  }
+}
