--- a/styles/components/loader.scss
+++ b/styles/components/loader.scss
@@ -11,44 +11,63 @@
   justify-content: center;
   align-items: center;
   transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
-}
-.loader {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: bullet-animation 1s ease-in-out 2s infinite alternate;
 
-  svg {
-    animation: fill-animation 0.5s forwards 1s;
-    path {
-      stroke-dasharray: 572;
-      stroke-dashoffset: 572;
-      animation: text-animation 5s ease forwards;
-    }
-    @keyframes text-animation {
-      from {
+  .loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: bullet-animation 1s ease-in-out 2s infinite alternate;
+  
+    svg {
+      animation: fill-animation 0.5s forwards 1s;
+      path {
+        stroke-dasharray: 572;
         stroke-dashoffset: 572;
+        animation: text-animation 5s ease forwards;
+      }
+      @keyframes text-animation {
+        from {
+          stroke-dashoffset: 572;
+        }
+        to {
+          stroke-dashoffset: 0;
+        }
+      }
+    }
+    @keyframes fill-animation {
+      from {
+        fill: transparent;
       }
       to {
-        stroke-dashoffset: 0;
+        fill: $light;
       }
     }
   }
-  @keyframes fill-animation {
+  
+  @keyframes bullet-animation {
     from {
-      fill: transparent;
+      transform: translateY(0);
     }
     to {
-      fill: $light;
+      transform: translateY(-10px);
     }
   }
-}
 
-@keyframes bullet-animation {
-  from {
-    transform: translateY(0);
-  }
-  to {
-    transform: translateY(10px);
+  .copyright {
+    position: absolute;
+    bottom: 1rem;
+    padding: 0 1rem;
+    text-align: center;
+    font-weight: 500;
+    font-family: $font-primary;
+    color: $light;
+    a {
+      color: inherit;
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: inherit;
+      display: inline-block;
+      text-decoration: underline;
+    }
   }
 }
