--- a/styles/components/nav.scss
+++ b/styles/components/nav.scss
@@ -48,6 +48,10 @@
     }
   }
 
+  .nav-burger {
+    display: none;
+  }
+
   @media screen and (max-width: 576px) {
     ul {
       position: absolute;
@@ -132,12 +136,12 @@
         }
         &:nth-child(4) {
           li {
-            animation: fadeIn 0.25s ease-in-out .40s forwards;
+            animation: fadeIn 0.25s ease-in-out 0.4s forwards;
           }
         }
         &:nth-child(5) {
           li {
-            animation: fadeIn 0.25s ease-in-out .45s forwards;
+            animation: fadeIn 0.25s ease-in-out 0.45s forwards;
           }
         }
         @keyframes fadeIn {
