--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -24,7 +24,7 @@
         font-weight: 700;
         color: transparent;
         text-transform: uppercase;
-        letter-spacing: .15rem;
+        letter-spacing: 0.15rem;
         -webkit-text-stroke: 2px $primary;
         // font-family: $font-primary;
         @media only screen and (max-width: 640px) {
@@ -48,15 +48,42 @@
       display: flex;
       align-items: center;
       gap: 1.5rem;
+      margin-top: 1rem;
       a {
+        position: relative;
         display: flex;
         font-size: 1.25rem;
         font-weight: 500;
         color: $primary;
-        text-decoration: underline;
         font-family: $font-primary;
+        &:first-child {
+        }
         &:last-child {
           margin-right: 0;
+        }
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 1px;
+          background: $primary;
+          transform: scaleX(0);
+          transform-origin: right;
+          transition: transform 0.25s ease-in-out;
+        }
+
+        &:hover {
+          &::after {
+            height: 1px;
+            transform-origin: left;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            transform: scaleX(1);
+          }
         }
       }
     }
@@ -117,19 +144,18 @@
     flex-direction: column-reverse;
     align-items: center;
     &-left {
-      width: 90%;
-      padding: 2rem 0 8rem 0;
+      width: 100%;
+      padding: 2rem 1rem 8rem 1rem;
     }
     &-right {
-      width: 90%;
+      width: 100%;
       height: 100%;
       min-height: 100%;
-      padding-left: 0;
       margin-top: 5rem;
+      padding-left: 0;
       &__image {
-        border-radius: 30px;
-        img{
-
+        border-radius: 20px 20px 0 0;
+        img {
         }
       }
     }
@@ -155,6 +181,9 @@ body.dark {
       &__links {
         a {
           color: $light;
+          &::after {
+            background: $light;
+          }
         }
       }
     }
