--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -56,6 +56,12 @@
         font-weight: 500;
         color: $primary;
         font-family: $font-primary;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        svg {
+          width: 15px;
+        }
         &:first-child {
         }
         &:last-child {
