--- a/styles/pages/contact.scss
+++ b/styles/pages/contact.scss
@@ -22,7 +22,7 @@
     width: 300px;
     bottom: 10%;
     left: 10%;
-    transform: rotate(0deg) translateX(0) rotate(0deg);
+     // transform: rotate(0deg) translateX(0) rotate(0deg);
     //display: none;
     @media screen and (max-width: 980px) {
       width: 200px;
