ajout des certifications

--- a/styles/pages/skills.scss
+++ b/styles/pages/skills.scss
@@ -50,11 +50,11 @@
         align-items: center;
         gap: 1.5rem;
         .card {
-            &-icon {
-                img {
-                    width: 30px;
-                }
+          &-icon {
+            img {
+              width: 30px;
             }
+          }
         }
       }
       .card {
@@ -83,6 +83,76 @@
       }
     }
   }
+  &-certif {
+    z-index: 2;
+    width: 100%;
+    margin-bottom: 2rem;
+
+    &__title {
+      border-bottom: 1.25px solid $primary;
+      margin-bottom: 1.5rem;
+      h2 {
+        position: relative;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 0.15rem;
+        color: transparent;
+        text-transform: uppercase;
+        -webkit-text-stroke: 1.5px $primary;
+        // font-family: $font-primary;
+        @media only screen and (max-width: 640px) {
+          font-size: 1.5rem;
+        }
+      }
+    }
+
+    &__cards {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      li {
+        display: flex;
+        align-items: center;
+        flex-shrink: 0;
+        a {
+          position: relative;
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+
+          color: $primary;
+          span {
+            font-size: 1.25rem;
+            font-weight: 400;
+            color: inherit;
+          }
+          svg {
+            width: 15px;
+          }
+
+          &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background: $primary;
+            transform: scaleX(0);
+            transform-origin: right;
+            transition: transform 0.25s ease-in-out;
+          }
+
+          &:hover {
+            &::after {
+              transform-origin: left;
+              transform: scaleX(1);
+            }
+          }
+        }
+      }
+    }
+  }
 }
 body.dark {
   .skills {
@@ -98,6 +168,24 @@ body.dark {
         .card {
           h3 {
             color: $light;
+          }
+        }
+      }
+    }
+    &-certif {
+      &__title {
+        border-color: $light;
+        h2 {
+          -webkit-text-stroke: 1.5px $light;
+        }
+      }
+      &__cards {
+        li {
+          a {
+            color: $light;
+            span {
+              color: inherit;
+            }
           }
         }
       }
